--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,6 @@ cache:
     - $HOME/.gradle/caches/
     - $HOME/.gradle/wrapper/      
 
-script: gradle checkCode
+script: 
+  - cd lesson2
+  - gradle checkCode
