--- a/lesson2/build.gradle
+++ b/lesson2/build.gradle
@@ -42,6 +42,10 @@ allprojects {
     }
 }
 
+dependencies {
+    testCompile 'junit:junit:4.12'
+}
+
 apply plugin: "pmd"
 //apply plugin: "findbugs"
 apply plugin: "checkstyle"
@@ -92,5 +96,5 @@ task pmd(type: Pmd) {
 }
 
 task checkCode(type: GradleBuild) {
-    tasks = ['pmd', 'checkstyle']
+    tasks = ['test', 'pmd', 'checkstyle']
 }
