--- a/.gitignore
+++ b/.gitignore
@@ -34,14 +34,14 @@ captures/
 
 # IntelliJ
 *.iml
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/gradle.xml
-.idea/assetWizardSettings.xml
-.idea/dictionaries
-.idea/libraries
-.idea/caches
-.idea/misc.xml
+lesson2/.idea/workspace.xml
+lesson2/.idea/tasks.xml
+lesson2/.idea/gradle.xml
+lesson2/.idea/assetWizardSettings.xml
+lesson2/.idea/dictionaries
+lesson2/.idea/libraries
+lesson2/.idea/caches
+lesson2/.idea/misc.xml
 
 # Keystore files
 # Uncomment the following line if you do not want to check your keystore files in.
@@ -91,7 +91,3 @@ Icon
 Network Trash Folder
 Temporary Items
 .apdisk
-
-# Idea 
-./idea
-lesson2/.idea/workspace.xml
